<resources xmlns:xliff="http://schemas.android.com/tools">
    <string name="app_name" translatable="false">Travel Mate</string>
    <string name="facebook_app_id">1700516400207849</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_signing">SigningActivity</string>
    <string name="sign_up" translatable="false">Sign Up</string>
    <string name="sign_in" translatable="false">Sign In</string>
    <string name="sign_in_with_facebook" translatable="false">Sign in with Facebook</string>
    <string name="no_internet_connection">No internet connection!</string>
    <string name="title_activity_sign_in">SignInActivity</string>
    <string name="sign_in_c">SIGN IN</string>
    <string name="your_e_mail_address">Your E-Mail Address</string>
    <string name="your_password">Your Password</string>
    <string name="title_activity_sign_up">SignUpActivity</string>
    <string name="sign_up_c">SIGN UP</string>
    <string name="enter_your_name">Enter Your Name</string>
    <string name="enter_your_e_mail">Enter Your E-Mail</string>
    <string name="enter_your_password">Enter Your Password</string>
    <string name="title_activity_select_destination">SelectDestinationActivity</string>
    <string name="your_destination">YOUR DESTINATION</string>
    <string name="enter">Enter</string>
    <string name="can_not_login">Cannot login!</string>
    <string name="cancelled">Cancelled!</string>
    <string name="there_is_an_error">Error connecting to Facebook. Please try again later!</string>
    <string name="j_response">response</string>
    <string name="j_message">message</string>
    <string name="server_error">There is a server error!</string>
    <string name="server_not_responding">Server not responding!</string>
    <string name="enter_valid_email">Enter valid email!</string>
    <string name="register_success">You have Registered Successfully.</string>
    <string name="enter_your_destination">Enter Your Destination</string>
    <string name="title_activity_home">Travel Mate</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="change_location">Change Location</string>
    <string name="weather">Weather</string>
    <string name="my_saves">Saved Places</string>
    <string name="logout">Logout</string>
    <string name="want_to_logout">Do you want to logout?</string>
    <string name="cancel">Cancel</string>
    <string name="logout_success">You have logged out successfully.</string>
    <string name="home">Home</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hotels">Hotels</string>
    <string name="restaurants">Restaurants</string>
    <string name="places_near">Places Near By</string>
    <string name="loading">Loading…Please wait</string>
    <string name="no_internet_connection_try_again">Please check your Internet Connection and Try again!</string>
    <string name="error_in_loading_data">Error occurred while loading data from server!Please try again later!</string>
    <string name="bad_request">Bad Request</string>
    <string name="no_data_found_location">Sorry,but no data found in the location you entered!</string>
    <string name="failed_to_connect">Failed to connect with server. Please check your internet connection!</string>
    <string name="failed_to_connect_yelp">Failed to connect</string>
    <string name="unable_to_connect_host">Unable to resolve host</string>
    <string name="no_distance_available">Distance not available.</string>
    <string name="error_while_fetching">Error occurred while feching data from server! Please try again after sometime!</string>
    <string name="can_not_find_coordinates">Cannot find your location co-ordinates!</string>
    <string name="diatance">Distance :</string>
    <string name="sort_by">Sort By</string>
    <string name="rating_text">Sort By Rating</string>
    <string name="sort">Sort</string>
    <string name="select_sort_option">Please select sort option!</string>
    <string name="filter">Filter</string>
    <string name="title_activity_detail">DetailActivity</string>
    <string name="action_share">Share</string>
    <string name="title_activity_maps">Map</string>
    <string name="no_data_found">No Data Found!</string>
    <string name="no_number_available">No number available!</string>
    <string name="no_url_available">No url available!</string>
    <string name="no_rating_available">No rating available!</string>
    <string name="record_remove">Removed from Saved Places</string>
    <string name="record_added">Added to Saved Places</string>
    <string name="can_not_find_location">Cannot find the location entered!</string>
    <string name="no_data_into_mysaves">No place saved yet!</string>
    <string name="sign_in_with_facebook_des">Sign In With Facebook</string>
    <string name="create_an_account">Create an account</string>
    <string name="sign_in_with_existing_account">Sign in with existing account</string>
    <string name="enter_into_the_app">Enter into the app</string>
    <string name="fahrenheit">Fahrenheit</string>
    <string name="celsius">Celsius</string>
    <string name="reviews_save">Reviews</string>
    <string name="details_preview_image">Preview Image</string>
    <string name="background_image_for_description">Background image for description</string>
    <string name="logo_of_facebook">Logo of Facebook</string>
    <string name="logo_of_the_app">Logo of the App</string>
    <string name="selected_this_filter_option">Selected this Filter Option</string>
    <string name="preview_image_for_the_cuisine">Preview image for the cuisine</string>
    <string name="refreshing_the_content">Refreshing the content</string>
    <string name="preview_image_for_background">Preview Image for background</string>
    <string name="image_according_to_the_weather_selected">Image according to the weather selected</string>
    <string name="rain">Rain</string>
    <string name="image_for_the_moisture">Image for the moisture</string>
    <string name="image_for_rating">Image for Rating</string>
    <string name="preview_image_for_the_weather">Preview image for the weather</string>
    <string name="forwar_slash">/</string>
    <string name="image_of_the_user">Image of the User</string>
    <string name="sign_in_background_image">Sign In background image</string>
    <string name="sign_up_background_image">Sign Up background image</string>
    <string name="close_and_return_to_login_page">Close and return to Login Page</string>
    <string name="select_to_sort_the_options">Select to Sort the options</string>
    <string name="select_to_choose_filter">Select to choose Filter</string>
    <string name="image_for_the_website">Image for the Website</string>
    <string name="select_to_make_a_call">Select to make a call</string>
    <string name="details_website">Website</string>

    <string name="condition_2xx">Storm</string>
    <string name="condition_3xx">Drizzle</string>
    <string name="condition_500">Light Rain</string>
    <string name="condition_501">Moderate Rain</string>
    <string name="condition_502">Heavy Rain</string>
    <string name="condition_503">Intense Rain</string>
    <string name="condition_504">Extreme Rain</string>
    <string name="condition_511">Freezing Rain</string>
    <string name="condition_520">Light Shower</string>
    <string name="condition_521">Shower</string>
    <string name="condition_522">Heavy Shower</string>
    <string name="condition_531">Ragged Shower</string>
    <string name="condition_600">Light Snow</string>
    <string name="condition_601">Snow</string>
    <string name="condition_602">Heavy Snow</string>
    <string name="condition_611">Sleet</string>
    <string name="condition_612">Shower Sleet</string>
    <string name="condition_615">Rain and Snow</string> <!-- light rain and snow -->
    <string name="condition_616">Rain and Snow</string>
    <string name="condition_620">Shower Snow</string> <!-- light shower snow -->
    <string name="condition_621">Shower Snow</string>
    <string name="condition_622">Shower Snow</string> <!-- heavy shower snow -->
    <string name="condition_701">Mist</string>
    <string name="condition_711">Smoke</string>
    <string name="condition_721">Haze</string>
    <string name="condition_731">Sand, Dust</string>
    <string name="condition_741">Fog</string>
    <string name="condition_751">Sand</string>
    <string name="condition_761">Dust</string>
    <string name="condition_762">Volcanic Ash</string>
    <string name="condition_771">Squalls</string>
    <string name="condition_781">Tornado</string>
    <string name="condition_800">Clear</string>
    <string name="condition_801">Mostly Clear</string>
    <string name="condition_802">Scattered Clouds</string>
    <string name="condition_803">Broken Clouds</string>
    <string name="condition_804">Overcast Clouds</string>
    <string name="condition_900">Tornado</string>
    <string name="condition_901">Tropical Storm</string>
    <string name="condition_902">Hurricane</string>
    <string name="condition_903">Cold</string>
    <string name="condition_904">Hot</string>
    <string name="condition_905">Windy</string>
    <string name="condition_906">Hail</string>
    <string name="condition_951">Calm</string>
    <string name="condition_952">Light Breeze</string>
    <string name="condition_953">Gentle Breeze</string>
    <string name="condition_954">Breeze</string> <!-- moderate breeze -->
    <string name="condition_955">Fresh Breeze</string>
    <string name="condition_956">Strong Breeze</string>
    <string name="condition_957">High Wind</string>
    <string name="condition_958">Gale</string>
    <string name="condition_959">Severe Gale</string>
    <string name="condition_960">Storm</string>
    <string name="condition_961">Violent Storm</string>
    <string name="condition_962">Hurricane</string>
    <string name="condition_unknown">Unknown (<xliff:g id="low">%1$s</xliff:g>)</string>
    <string name="a11y_forecast">Forecast: <xliff:g id="condition">%1$s</xliff:g></string>
    <string name="a11y_forecast_icon">Forecast icon: <xliff:g id="condition">%1$s</xliff:g></string>
    <string name="a11y_high_temp">High: <xliff:g id="high">%1$s</xliff:g></string>
    <string name="a11y_low_temp">Low: <xliff:g id="low">%1$s</xliff:g></string>
    <string name="a11y_humidity">Humidity: <xliff:g id="humidity">%1$s</xliff:g></string>
    <string name="a11y_pressure">Barometric Pressure: <xliff:g id="pressure">%1$s</xliff:g></string>
    <string name="a11y_wind">Wind speed and direction: <xliff:g id="wind">%1$s</xliff:g></string>
    <string name="format_temperature"><xliff:g id="temp">%1.0f</xliff:g>\u00B0</string>
    <string name="title_widget_today">Travel Mate</string>
</resources>
