<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:tools="http://schemas.android.com/tools"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:padding="8dp">

    <LinearLayout
        android:id="@+id/widget"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#000000"
        android:orientation="vertical"
        android:padding="4dp">
    <ImageView
        android:id="@+id/logo"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:src="@drawable/logo"
        android:layout_weight="1"
        android:contentDescription="@string/logo_of_the_app"/>

    <TextView
        android:id="@+id/tv_signin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/custom_simple_button"
        android:textColor="@color/white"
        android:gravity="center"
        android:layout_gravity="center_horizontal"
        android:text="@string/sign_in"
        android:padding="@dimen/_10sdp"
        android:textSize="@dimen/_16sdp"
        android:contentDescription="@string/sign_in_with_existing_account"/>

    </LinearLayout>
</FrameLayout>