<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.gill.travelmate.SelectDestinationActivity"
    tools:showIn="@layout/activity_select_destination">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/destination_bg"
        android:contentDescription="@string/background_image_for_description"/>

    <RelativeLayout
        android:id="@+id/rl_top"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_40sdp"
        android:background="@color/black_transparent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:padding="@dimen/_5sdp"
            android:text="@string/your_destination"
            android:textColor="@color/white"
            android:textSize="@dimen/_16sdp" />

        <ImageView
            android:id="@+id/cross"
            android:layout_width="@dimen/_40sdp"
            android:layout_height="@dimen/_40sdp"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:padding="@dimen/_6sdp"
            android:src="@drawable/cross"
            android:contentDescription="@string/close_and_return_to_login_page"
            android:visibility="gone" />
    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/rl_top">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/_20sdp"
                android:text="@string/app_name"
                android:textColor="@color/white"
                android:textSize="@dimen/_40sdp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/title"
                android:layout_marginTop="@dimen/_30sdp"
                android:descendantFocusability="beforeDescendants"
                android:focusableInTouchMode="true"
                android:orientation="vertical"
                android:padding="@dimen/_10sdp">

                <android.support.design.widget.TextInputLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_10sdp">

                    <AutoCompleteTextView
                        android:id="@+id/et_destination"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_40sdp"
                        android:gravity="center_vertical"
                        android:hint="@string/enter_your_destination"
                        android:inputType="text"
                        android:padding="@dimen/_5sdp"
                        android:singleLine="true"
                        android:textColor="@color/white"
                        android:textColorHint="@color/colorPrimary"
                        android:textSize="@dimen/_15sdp" />
                </android.support.design.widget.TextInputLayout>


                <TextView
                    android:id="@+id/tv_enter"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_40sdp"
                    android:layout_marginRight="@dimen/_5sdp"
                    android:layout_marginEnd="@dimen/_5sdp"
                    android:layout_marginTop="@dimen/_30sdp"
                    android:background="@drawable/custom_simple_button"
                    android:gravity="center"
                    android:padding="@dimen/_10sdp"
                    android:text="@string/enter"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_16sdp"
                    android:contentDescription="@string/enter_into_the_app"/>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</RelativeLayout>
