<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.gill.travelmate.SigningActivity"
    tools:showIn="@layout/activity_signing"
    android:background="@drawable/signing_bg"
    android:id="@+id/container_signing"
    android:padding="@dimen/_10sdp">

    <com.facebook.login.widget.LoginButton
        android:id="@+id/login_button"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"/>

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/app_name"
        android:textSize="@dimen/_40sdp"
        android:layout_marginTop="@dimen/_50sdp"
        android:textColor="@color/white"/>

    <LinearLayout
        android:id="@+id/ll_fb_signin"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_40sdp"
        android:layout_above="@+id/bt_ll"
        android:layout_marginBottom="@dimen/_10sdp"
        android:orientation="horizontal"
        android:background="@drawable/custom_facebook_button"
        android:gravity="center_horizontal">

        <ImageView
            android:layout_width="@dimen/_35sdp"
            android:layout_height="@dimen/_35sdp"
            android:src="@drawable/fb"
            android:layout_gravity="center_vertical"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textColor="@color/white"
            android:gravity="center"
            android:text="@string/sign_in_with_facebook"
            android:padding="@dimen/_10sdp"
            android:textSize="@dimen/_16sdp"/>
    </LinearLayout>
    
    <LinearLayout
        android:id="@+id/bt_ll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="@dimen/_50sdp">

        <TextView
            android:id="@+id/tv_signup"
            android:layout_width="0dp"
            android:layout_height="@dimen/_40sdp"
            android:layout_weight="1"
            android:background="@drawable/custom_simple_button"
            android:textColor="@color/white"
            android:gravity="center"
            android:text="@string/sign_up"
            android:padding="@dimen/_10sdp"
            android:textSize="@dimen/_16sdp"
            android:layout_marginRight="@dimen/_5sdp"/>
        <TextView
            android:id="@+id/tv_signin"
            android:layout_width="0dp"
            android:layout_height="@dimen/_40sdp"
            android:layout_weight="1"
            android:background="@drawable/custom_simple_button"
            android:textColor="@color/white"
            android:gravity="center"
            android:text="@string/sign_in"
            android:padding="@dimen/_10sdp"
            android:textSize="@dimen/_16sdp"
            android:layout_marginLeft="@dimen/_5sdp"/>
    </LinearLayout>
</RelativeLayout>
